    -> User written scripts can more easily analyze device states

  User visible changes:
  - at/notify "renamed" to "define <name> at/notify", both moved to external
    modules. Now it is possible
    - to have a further "at" or "notify" modules
      (notify & filelog use the same interface)
    - to have more than one notify for the same event
    - to delete at commands without strange escapes.
      The delete syntax changed (no more def/at/ntfy needed)
    - at/notify can have attributes
    Drawback: each at and notify must have a name, which is strange first.
  - logfile/modpath/pidfile/port/verbose "renamed" to "attr global xxx"
    Dumping and extending these attributes is easier, no special handling
    required in the web-frontend.
  - savefile renamed to "attr global statefile"
  - configfile global attribute added.
  - save command added, it writes the statefile and then the configfile.
  - delattr added to delete single attributes
  - list/xmllist format changed, they contain more information.
  - "define/set/get/attr name ?" returns a list of possible arguments
    in the same format. This data is contained in the xmllist.
  - disable attribute for at/notify/filelog
  - rename added

- Rudi, Tue Mar 27 20:43:15 MEST 2007
  fhemweb.pl (webpgm2) changes:
  - adopted to the new syntax
  - better commandline support (return <pre> formatted)
  - FileLog attribute logtype added, and 4 logtypes (== gnuplot files)
    defined: fs20, fht, ks300_1, ks300_2
  - links in the commandref.html file added
  - device dependent attribute and set support

- Pest, Sun Apr 08 17:55:15 MEST 2007
  em1010.pl:
  - Make difference between sensors 1..4 and 5..
  - Checked values for sensor 5 (cur.energy + cur.power) - ok
  - Checked values for sensor 5 cur.energy is ok, cur.power still off.
    Correction factor needs to be determined.
  - setTime: Without argument, now the current time of the PC is used.
  - setRperKW: Factor of 10 required, 75 U/kWh -> 750.
